agregue contenido al index y hover en el footer

--- a/contacto.html
+++ b/contacto.html
@@ -110,7 +110,7 @@
                     <p class="textoContacto">Hacé click para contactarte por WhatsApp</p>
                 </div>
 
-                <div class="contenedorContacto">
+                <div class="contenedorContacto mb-4">
                     <p class="textoContacto">Contactate por email: jeruncioclown@gmail.com</p>
                     <a href="mailto:jeruncio.clown@gmail.com">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
@@ -135,7 +135,7 @@
     <footer class="footer">
 
         <div class="footer__redes">
-            <a href="https://www.instagram.com/jeruncio.clown/"><svg xmlns="http://www.w3.org/2000/svg"
+            <a class="footer__redes--hover" href="https://www.instagram.com/jeruncio.clown/"><svg xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="36" height="36"
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                     <g fill="none">
@@ -146,7 +146,7 @@
                 </svg>
             </a>
 
-            <a href="https://www.facebook.com/PayasoJeruncioTerrible/"><svg xmlns="http://www.w3.org/2000/svg"
+            <a class="footer__redes--hover" href="https://www.facebook.com/PayasoJeruncioTerrible/"><svg xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="36" height="36"
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 1000">
                     <path
