actualizacion de bio

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="container main--funciones mb-4">
                 <h2 class="titulo text-center animate__animated animate__heartBeat animate__delay-3s">Fechas de
                     Noviembre y Diciembre!</h2>
-                <h3 class="titulo--h3 text-center mt-4 mb-4">Nos encontranos todos los días Jueves a las 21.30hs en el
+                <h3 class="titulo--h3 text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
                     Galpón de
                     Banfield</h3>
                 <div class="row ubicacion"><iframe
