mejoras en index, bio y seccion media terminada

--- a/index.html
+++ b/index.html
@@ -76,16 +76,12 @@
 
     <div class="fondo fondo--inicio">
 
-        <div class="container main main--tarjetas">
+        <div class="container main--tarjetas">
 
-            <div class="row">
-                <div class="col">
-                    <h1 class="titulo text-center mt-5">Jeruncio Clown</h1>
-                </div>
-            </div>
+            <h1 class="titulo titulo-- text-center mt-5">Jeruncio Clown <img src="img/svg/clowncolor-svgrepo-com.svg" alt="clown"
+                    height="100"></h1>
 
             <!-- Fin del titulo -->
-
 
             <div class="text-center contenedor--tarjetas">
 
@@ -127,12 +123,12 @@
 
             </div>
 
-            <div class="container main--funciones mb-4">
+            <div class=" main--funciones mb-4">
                 <h2 class="titulo text-center animate__animated animate__heartBeat animate__delay-3s">Fechas de
                     Noviembre y Diciembre!</h2>
-                <h3 class="titulo--h3 text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
+                <p class="negrita text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
                     Galpón de
-                    Banfield</h3>
+                    Banfield</p>
                 <div class="row ubicacion"><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.435721615151!2d-58.39696378476657!3d-34.744615280423275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd29f5dedd66b%3A0xbb3ab0eb4fdd1bd6!2sEl%20Galp%C3%B3n%20de%20Banfield!5e0!3m2!1ses-419!2sar!4v1636581534945!5m2!1ses-419!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
