mejoras varias y seccion tecnica terminada

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="tarjetas mb-4 animate__animated animate__fadeIn">
 
-                    <p>
+                    <p class="tarjetas--textindex">
                         Hay una línea que atraviesa el día a día, un hilo invisible que mantiene el
                         (des)equilibrio cotidiano. La
                         llegada de un payaso a la escena puede hacer que ese hilo cambie, gire, se enriede, afloje y
@@ -102,7 +102,7 @@
 
                 <div class="tarjetas mb-4 animate__animated animate__fadeIn animate__delay-1s">
 
-                    <p>
+                    <p class="tarjetas--textindex">
                         Jeruncio, con su picardía y carisma nos invita a entrar en su universo, generando un vinculo
                         fugaz
                         pero
@@ -113,7 +113,7 @@
 
                 <div class="tarjetas mb-4 animate__animated animate__fadeIn animate__delay-2s">
 
-                    <p>
+                    <p class="tarjetas--textindex">
                         Aplicando técnicas del malabarismo, gags cómicos, juegos participativos y control de su
                         monociclo de 1,70mts, este payaso tiene un solo objetivo: divertir y sorprender a grandes y
                         chicos.
