update bio y tecnica

--- a/tecnica.html
+++ b/tecnica.html
@@ -117,7 +117,7 @@
 
         </div>
 
-        <div class="alert alert-danger text-center">
+        <div class="alert alert-danger text-center mb-5">
             <p>Importante: Todos los shows de Jeruncio cumplen con el protocolo de COVID-19</p>
         </div>
 
