mejoras en barra nav

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
     <header class="header">
         <nav class="navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand navbar__logo enlace" href="index.html">
-                    <img src="img/logo.svg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
-                    <span class="enlace--transicion">Jeruncio Clown</span>
-                </a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.svg" alt="logo" width="30" height="24"
+                        class="d-inline-block align-text-top navbar__logo"></a>
+                <a class="enlace" href="index.html">Jeruncio Clown</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -78,8 +79,8 @@
 
         <div class="container main--tarjetas">
 
-            <h1 class="titulo titulo-- text-center mt-5">Jeruncio Clown <img src="img/svg/clowncolor-svgrepo-com.svg" alt="clown"
-                    height="100"></h1>
+            <h1 class="titulo titulo-- text-center mt-5">Jeruncio Clown <img src="img/svg/clowncolor-svgrepo-com.svg"
+                    alt="clown" height="100"></h1>
 
             <!-- Fin del titulo -->
 
