--- a/media.html
+++ b/media.html
@@ -34,10 +34,11 @@
     <header class="header">
         <nav class="navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand navbar__logo enlace" href="index.html">
-                    <img src="img/logo.svg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
-                    <span class="enlace--transicion">Jeruncio Clown</span>
-                </a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.svg" alt="logo" width="30" height="24"
+                        class="d-inline-block align-text-top navbar__logo"></a>
+                <a class="enlace" href="index.html">Jeruncio Clown</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +81,7 @@
                 <div class="tarjetas text-center mt-5">
                     <p class="negrita">Hacé click en la imagen que quieras y descargala en alta definición!</p>
                     <img src="img/svg/download-svgrepo-com.svg" alt="download" height="50">
-                  
+
                 </div>
             </div>
 
@@ -91,7 +92,7 @@
                         <a href="img/galeria/1.webp"><img src="img/galeria/1.webp" class="d-block w-100"
                                 alt="Jeruncio"></a>
 
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block">
                             <h5>Encuentro de circo de La Costa</h5>
                         </div>
                     </div>
@@ -101,7 +102,7 @@
                         <a href="img/galeria/2.webp"><img src="img/galeria/2.webp" class="d-block w-100"
                                 alt="Jeruncio"></a>
 
-                        <div class="carousel-caption  d-none d-md-block">
+                        <div class="carousel-caption d-block">
                             <h5>Encuentro de circo de La Costa</h5>
                         </div>
                     </div>
@@ -110,7 +111,7 @@
                         <a href="img/galeria/3.webp"><img src="img/galeria/3.webp" class="d-block w-100"
                                 alt="Jeruncio"></a>
 
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block">
                             <h5>Encuentro de circo de La Costa</h5>
                         </div>
                     </div>
