agregue contenido en tecnica

--- a/tecnica.html
+++ b/tecnica.html
@@ -72,7 +72,7 @@
 
     <div class="fondo fondo--tecnica">
 
-        <div class="container main tecnica">
+        <div class="container tecnica">
 
             <div class="tecnica__tarjeta">
                 <div>
@@ -122,6 +122,29 @@
             <p>Importante: Todos los shows de Jeruncio cumplen con el protocolo de COVID-19</p>
         </div>
 
+        <div class="protocolo">
+            <div class="tarjetas contenedorTecnica">
+                <h4 class="negrita text-center">Para ingresar a los shows de Jeruncio, deberás:</h4>
+
+                <div class="mb-5">
+                    <p class="texto__protocolo text-center mt-5">Usar barbijo en todo momento</p>
+                    <img class="habilidades__img" src="img/svg/face-mask-svgrepo-com.svg" alt="face-mask">
+                </div>
+
+                <div class="mb-5">
+                    <p class="texto__protocolo text-center">Respetar siempre la distancia mínima indicada</p>
+                    <img class="habilidades__img"
+                        src="img/svg/social-distancing-covid-social-distance-coronavirus-spread-prevention-svgrepo-com.svg"
+                        alt="social distance">
+                </div>
+
+                <div class="mb-5">
+                    <p class="texto__protocolo text-center">Cumplir con todos los protocolos indicados por el espacio
+                    </p>
+                    <img class="habilidades__img" src="img/svg/health-care-svgrepo-com.svg" alt="rules">
+                </div>
+            </div>
+        </div>
         <footer class="footer">
 
             <div class="footer__redes">
