--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Animaciones -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 
@@ -84,9 +84,9 @@
 
             <!-- Fin del titulo -->
 
-            <div class="text-center contenedor--tarjetas">
+            <div class="text-center contenedor--tarjetas" data-aos="fade-left" data-aos-once="true">
 
-                <div class="tarjetas mb-4 animate__animated animate__fadeIn">
+                <div class="tarjetas mb-4">
 
                     <p class="tarjetas--textindex">
                         Hay una línea que atraviesa el día a día, un hilo invisible que mantiene el
@@ -101,7 +101,7 @@
                     </p>
                 </div>
 
-                <div class="tarjetas mb-4 animate__animated animate__fadeIn animate__delay-1s">
+                <div class="tarjetas mb-4" data-aos="fade-right" data-aos-once="true">
 
                     <p class="tarjetas--textindex">
                         Jeruncio, con su picardía y carisma nos invita a entrar en su universo, generando un vinculo
@@ -112,7 +112,7 @@
 
                 </div>
 
-                <div class="tarjetas mb-4 animate__animated animate__fadeIn animate__delay-2s">
+                <div class="tarjetas mb-4" data-aos="fade-left" data-aos-once="true">
 
                     <p class="tarjetas--textindex">
                         Aplicando técnicas del malabarismo, gags cómicos, juegos participativos y control de su
@@ -124,8 +124,8 @@
 
             </div>
 
-            <div class=" main--funciones mb-4">
-                <h2 class="titulo text-center animate__animated animate__heartBeat animate__delay-3s">Fechas de
+            <div class="main--funciones mb-4" data-aos="fade-up">
+                <h2 class="titulo text-center">Fechas de
                     Noviembre y Diciembre!</h2>
                 <p class="negrita text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
                     Galpón de
@@ -171,6 +171,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 400,
+            duration: 1000
+        });
+    </script>
+
 </body>
 
 </html>
