cambio de animaciones, fondos, mejora en menu y demás

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
 
             <div class="main--funciones mb-4" data-aos="fade-up">
-                <h2 class="titulo text-center">Fechas de
+                <h2 class="titulo text-center" data-aos="flip-up">Fechas de
                     Noviembre y Diciembre!</h2>
                 <p class="negrita text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
                     Galpón de
