--- a/media.html
+++ b/media.html
@@ -69,9 +69,9 @@
         </nav>
     </header>
 
-    <div class="fondo fondo--bio">
+    <div class="fondo fondo--media">
 
-        <div class="container">
+        <div class="container" data-aos="zoom-in" data-aos-once="true">
 
             <div class="media">
                 <h2 class="titulo text-center mt-5 animate__animated animate__shakeY">Descargate contenido de
