--- a/tecnica.html
+++ b/tecnica.html
@@ -73,7 +73,7 @@
 
         <div class="container tecnica">
 
-            <div class="tecnica__tarjeta">
+            <div class="tecnica__tarjeta" data-aos="fade-down-right" data-aos-once="true">
                 <div>
                     <h3 class="tecnica__tarjeta--titulo">Tiempos</h3>
                     <img src="img/svg/clock-svgrepo-com.svg" alt="tiempos" height="50">
@@ -96,7 +96,7 @@
 
             </div>
 
-            <div class="tecnica__tarjeta">
+            <div class="tecnica__tarjeta" data-aos="fade-down-left" data-aos-once="true">
 
                 <div>
                     <h3 class="tecnica__tarjeta--titulo">Espacio</h3>
