--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
 
     <!-- Animaciones -->
 
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -81,12 +81,12 @@
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Dirección de email</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="Ingrese su email">
+                        placeholder="Ingresá tu email">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Escriba su mensaje</label>
-                    <textarea rows="10" cols="30" class="form-control" id="exampleFormControlTextarea1"
-                        rows="3"></textarea>
+                    <label for="exampleFormControlTextarea1" class="form-label">Dejale tu mensaje a Jeruncio</label>
+                    <textarea rows="10" cols="30" class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Escribí acá tu mensaje"></textarea>
                 </div>
 
                 <input class="boton" type="reset" value="Resetear formulario">
@@ -96,7 +96,7 @@
             </form>
 
             <div class="contacto">
-                <div class="contenedorContacto">
+                <div class="contenedorContacto animate__animated animate__bounceInLeft animate__delay-1s">
                     <a href="https://wa.me/5491158817371">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="32"
@@ -111,7 +111,7 @@
                     <p class="textoContacto">Hacé click para contactarte por WhatsApp</p>
                 </div>
 
-                <div class="contenedorContacto mb-3">
+                <div class="contenedorContacto mb-3 animate__animated animate__bounceInRight animate__delay-2s">
                     <p class="textoContacto">Contactate por email: jeruncioclown@gmail.com</p>
                     <a href="mailto:jeruncio.clown@gmail.com">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
@@ -159,15 +159,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-    AOS.init({
-        offset: 400,
-        duration: 1000
-    });
-</script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
