--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="La página oficial del payaso Jeruncio Clown!">
+    <meta name="description" content="La página oficial de Jeruncio Clown!">
     <meta name="keywords" content="payaso jeruncio clown shows">
 
     <title>Jeruncio Clown</title>
@@ -130,7 +130,7 @@
                 <p class="negrita text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
                     Galpón de
                     Banfield</p>
-                <div class="row ubicacion"><iframe
+                <div class="row ubicacion"><iframe title="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.435721615151!2d-58.39696378476657!3d-34.744615280423275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd29f5dedd66b%3A0xbb3ab0eb4fdd1bd6!2sEl%20Galp%C3%B3n%20de%20Banfield!5e0!3m2!1ses-419!2sar!4v1636581534945!5m2!1ses-419!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
