--- a/tecnica.html
+++ b/tecnica.html
@@ -74,8 +74,8 @@
         <div class="container tecnica">
 
             <div class="tecnica__tarjeta" data-aos="fade-down-right" data-aos-once="true">
-                <div>
-                    <h3 class="tecnica__tarjeta--titulo">Tiempos</h3>
+                <div class="tecnica__tarjeta__contenedor">
+                    <h3 class="tecnica__tarjeta--titulo text-center">Tiempos</h3>
                     <img src="img/svg/clock-svgrepo-com.svg" alt="tiempos" height="50">
                 </div>
 
@@ -98,8 +98,8 @@
 
             <div class="tecnica__tarjeta" data-aos="fade-down-left" data-aos-once="true">
 
-                <div>
-                    <h3 class="tecnica__tarjeta--titulo">Espacio</h3>
+                <div class="tecnica__tarjeta__contenedor">
+                    <h3 class="tecnica__tarjeta--titulo text-center">Espacio</h3>
                     <img src="img/svg/tent-svgrepo-com.svg" alt="espacio" height="50">
                 </div>
 
