--- a/tecnica.html
+++ b/tecnica.html
@@ -117,11 +117,11 @@
 
         </div>
 
-        <div class="alert alert-danger text-center mb-5">
+        <div class="alert alert-danger text-center mb-5" data-aos="zoom-in" data-aos-once="true">
             <p>Importante: Todos los shows de Jeruncio cumplen con el protocolo de COVID-19</p>
         </div>
 
-        <div class="protocolo">
+        <div class="protocolo" data-aos="zoom-in-up" data-aos-once="true">
             <div class="tarjetas contenedorTecnica">
                 <h4 class="negrita text-center">Para ingresar a los shows de Jeruncio, deberás:</h4>
 
