--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -77,18 +81,18 @@
 
     <div class="fondo fondo--inicio">
 
-        <div class="container main--tarjetas">
+        <div class="container inicio">
 
-            <h1 class="titulo titulo-- text-center mt-5">Jeruncio Clown <img src="img/svg/clowncolor-svgrepo-com.svg"
+            <h1 class="titulo text-center mt-5">Jeruncio Clown <img src="img/svg/clowncolor-svgrepo-com.svg"
                     alt="clown" height="100"></h1>
 
             <!-- Fin del titulo -->
 
-            <div class="text-center contenedor--tarjetas" data-aos="fade-left" data-aos-once="true">
+            <div class="text-center inicio__tarjetas" data-aos="fade-left" data-aos-once="true">
 
                 <div class="tarjetas mb-4">
 
-                    <p class="tarjetas--textindex">
+                    <p class="tarjetas--texto">
                         Hay una línea que atraviesa el día a día, un hilo invisible que mantiene el
                         (des)equilibrio cotidiano. La
                         llegada de un payaso a la escena puede hacer que ese hilo cambie, gire, se enriede, afloje y
@@ -103,7 +107,7 @@
 
                 <div class="tarjetas mb-4" data-aos="fade-right" data-aos-once="true">
 
-                    <p class="tarjetas--textindex">
+                    <p class="tarjetas--texto">
                         Jeruncio, con su picardía y carisma nos invita a entrar en su universo, generando un vinculo
                         fugaz
                         pero
@@ -114,7 +118,7 @@
 
                 <div class="tarjetas mb-4" data-aos="fade-left" data-aos-once="true">
 
-                    <p class="tarjetas--textindex">
+                    <p class="tarjetas--texto">
                         Aplicando técnicas del malabarismo, gags cómicos, juegos participativos y control de su
                         monociclo de 1,70mts, este payaso tiene un solo objetivo: divertir y sorprender a grandes y
                         chicos.
@@ -124,7 +128,7 @@
 
             </div>
 
-            <div class="main--funciones mb-4" data-aos="fade-up">
+            <div class="inicio__funciones mb-4" data-aos="fade-up">
                 <h2 class="titulo text-center" data-aos="flip-up">Fechas de
                     Noviembre y Diciembre!</h2>
                 <p class="negrita text-center mt-4 mb-4">Nos encontramos todos los días Jueves a las 21.30hs en el
@@ -134,8 +138,6 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.435721615151!2d-58.39696378476657!3d-34.744615280423275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd29f5dedd66b%3A0xbb3ab0eb4fdd1bd6!2sEl%20Galp%C3%B3n%20de%20Banfield!5e0!3m2!1ses-419!2sar!4v1636581534945!5m2!1ses-419!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-
-                <!-- Fin del contenido -->
             </div>
 
         </div>
