--- a/media.html
+++ b/media.html
@@ -27,6 +27,10 @@
     <!-- Animaciones -->
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -71,7 +75,7 @@
 
     <div class="fondo fondo--media">
 
-        <div class="container" data-aos="zoom-in" data-aos-once="true">
+        <div class="container pt-3" data-aos="zoom-in" data-aos-once="true">
 
             <div class="media">
                 <h2 class="titulo text-center mt-5 animate__animated animate__shakeY">Descargate contenido de
@@ -84,7 +88,6 @@
                 </div>
             </div>
 
-
             <div id="carouselExampleControls" class="carousel slide container-md mt-5 mb-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -95,7 +98,6 @@
                             <h5>Encuentro de circo de La Costa</h5>
                         </div>
                     </div>
-
 
                     <div class="carousel-item">
                         <a href="img/galeria/2.webp"><img src="img/galeria/2.webp" class="d-block w-100"
@@ -129,8 +131,29 @@
 
             <!-- Fin del carrousel -->
 
-            <div class="tarjetas text-center mt-5 mb-3">
-                <p class="negrita">Si querés ver más contenido de Jeruncio, seguilo en las redes sociales!</p>
+            <div class="tarjetas text-center mt-5 mb-3" data-aos="fade-up">
+                <p class="negrita">Seguí a Jeruncio en las redes sociales para más contenido e información actualizada
+                    sobre sus shows!</p>
+                <p>Esta sección será actualizada una vez al mes, por eso te recomendamos seguir a Jeruncio en todas sus
+                    redes sociales </p>
+
+            </div>
+
+            <div class="text-center mt-5 mb-3" data-aos="flip-up">
+                <h3 class="titulo mb-5">Te recordamos las redes:</h3>
+
+                <div class="habilidades__contenedor mb-5">
+                    <a href="https://www.instagram.com/jeruncio.clown/">
+                        <img class="habilidades__img" src="img/svg/instagram-svgrepo-com.svg" alt="instagram">
+                    </a>
+                </div>
+
+                <div class="habilidades__contenedor mb-5">
+                    <a href="https://www.facebook.com/PayasoJeruncioTerrible/">
+                        <img class="habilidades__img" src="img/svg/facebook-svgrepo-com.svg" alt="facebook">
+                    </a>
+                </div>
+
             </div>
 
         </div>
