--- a/contacto.html
+++ b/contacto.html
@@ -28,6 +28,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
