--- a/tecnica.html
+++ b/tecnica.html
@@ -27,6 +27,10 @@
     <!-- Animaciones -->
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
