--- a/tecnica.html
+++ b/tecnica.html
@@ -83,17 +83,17 @@
                     <img src="img/svg/clock-svgrepo-com.svg" alt="tiempos" height="50">
                 </div>
 
-                <div class="tarjetas contenedorTecnica">
+                <div class="tarjetas m-4 text-center">
                     <h4 class="subsTecnica">Duración:</h4>
                     <p class="textoTecnica">45 a 60 minutos</p>
                 </div>
 
-                <div class="tarjetas contenedorTecnica">
+                <div class="tarjetas m-4 text-center">
                     <h4 class="subsTecnica">Armado:</h4>
                     <p class="textoTecnica">30 minutos</p>
                 </div>
 
-                <div class="tarjetas contenedorTecnica">
+                <div class="tarjetas m-4 text-center">
                     <h4 class="subsTecnica">Desarmado:</h4>
                     <p class="textoTecnica">20 minutos</p>
                 </div>
@@ -107,25 +107,21 @@
                     <img src="img/svg/tent-svgrepo-com.svg" alt="espacio" height="50">
                 </div>
 
-                <div class="tarjetas contenedorTecnica">
+                <div class="tarjetas m-4 text-center">
                     <h4 class="subsTecnica">Espacio escénico</h4>
                     <p class="textoTecnica">4m x 4m</p>
                 </div>
 
-                <div class="tarjetas contenedorTecnica">
+                <div class="tarjetas m-4 text-center">
                     <h4 class="subsTecnica">Disposición del público:</h4>
                     <p class="textoTecnica">Anfiteatro / Ruedo de circo / Teatro Italiano</p>
                 </div>
-
             </div>
-
         </div>
 
-        <div class="alert alert-danger text-center mb-5" data-aos="zoom-in" data-aos-once="true">
-            <p>Importante: Todos los shows de Jeruncio cumplen con el protocolo de COVID-19</p>
-        </div>
+        <h3 class="titulo text-center m-4" data-aos="zoom-in" data-aos-once="true">Importante: Todos los shows de Jeruncio cumplen con el protocolo de COVID-19</h3>
 
-        <div class="protocolo" data-aos="zoom-in-up" data-aos-once="true">
+        <div class="protocolo m-4" data-aos="zoom-in-up" data-aos-once="true">
             <div class="tarjetas contenedorTecnica">
                 <h4 class="negrita text-center">Para ingresar a los shows de Jeruncio, deberás:</h4>
 
