--- a/tecnica.html
+++ b/tecnica.html
@@ -119,26 +119,27 @@
             </div>
         </div>
 
-        <h3 class="titulo text-center m-4" data-aos="zoom-in" data-aos-once="true">Importante: Todos los shows de Jeruncio cumplen con el protocolo de COVID-19</h3>
+        <h3 class="titulo text-center m-4" data-aos="zoom-in" data-aos-once="true">Importante: Todos los shows de
+            Jeruncio cumplen con el protocolo de COVID-19</h3>
 
         <div class="protocolo m-4" data-aos="zoom-in-up" data-aos-once="true">
-            <div class="tarjetas contenedorTecnica">
+            <div class="tarjetas">
                 <h4 class="negrita text-center">Para ingresar a los shows de Jeruncio, deberás:</h4>
 
-                <div class="mb-5">
-                    <p class="texto__protocolo text-center mt-5">Usar barbijo en todo momento</p>
+                <div class="mb-5 protocolo__contenedor">
+                    <p class="protocolo__texto text-center mt-5">Usar barbijo en todo momento</p>
                     <img class="habilidades__img" src="img/svg/face-mask-svgrepo-com.svg" alt="face-mask">
                 </div>
 
-                <div class="mb-5">
-                    <p class="texto__protocolo text-center">Respetar siempre la distancia mínima indicada</p>
+                <div class="mb-5 protocolo__contenedor">
+                    <p class="protocolo__texto text-center">Respetar siempre la distancia mínima indicada</p>
                     <img class="habilidades__img"
                         src="img/svg/social-distancing-covid-social-distance-coronavirus-spread-prevention-svgrepo-com.svg"
                         alt="social distance">
                 </div>
 
-                <div class="mb-5">
-                    <p class="texto__protocolo text-center">Cumplir con todos los protocolos indicados por el espacio
+                <div class="mb-5 protocolo__contenedor">
+                    <p class="protocolo__texto text-center">Cumplir con todos los protocolos indicados por el espacio
                     </p>
                     <img class="habilidades__img" src="img/svg/health-care-svgrepo-com.svg" alt="rules">
                 </div>
