trabajando sobre contacto

--- a/contacto.html
+++ b/contacto.html
@@ -76,7 +76,7 @@
 
     <div class="fondo fondo--contacto">
 
-        <div class="contacto--contenido centro">
+        <div class="contacto__container">
 
             <h2 class="titulo text-center mt-5">Contactá a Jeruncio</h2>
 
@@ -99,8 +99,8 @@
 
             </form>
 
-            <div class="contacto">
-                <div class="contenedorContacto animate__animated animate__bounceInLeft animate__delay-1s">
+            <div class="contacto__medios">
+                <div class="habilidades__contenedor animate__animated animate__bounceInLeft animate__delay-1s">
                     <a href="https://wa.me/5491158817371">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="32"
@@ -112,11 +112,10 @@
                                 </g>
                             </svg></div>
                     </a>
-                    <p class="textoContacto">Hacé click para contactarte por WhatsApp</p>
+                    <p class="textoContacto">Contactate por WhatsApp</p>
                 </div>
 
-                <div class="contenedorContacto mb-3 animate__animated animate__bounceInRight animate__delay-2s">
-                    <p class="textoContacto">Contactate por email: jeruncioclown@gmail.com</p>
+                <div class="habilidades__contenedor mb-3 animate__animated animate__bounceInRight animate__delay-2s">
                     <a href="mailto:jeruncio.clown@gmail.com">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="32"
@@ -126,8 +125,13 @@
                                     fill="currentColor" />
                             </svg></div>
                     </a>
+                    <p class="textoContacto">Contactate por email</p>
                 </div>
+            </div>
 
+            <div class="tarjetas text-center mt-5 mb-3" data-aos="fade-up">
+                <p class="negrita">Ante cualquier consulta, escribile a Jeruncio por cualquiera de los medios habilitados</p>
+                <p>El tiempo de respuesta no superará las 24 hábiles</p>
             </div>
 
         </div>
