--- a/tecnica.html
+++ b/tecnica.html
@@ -122,7 +122,7 @@
         <h3 class="titulo text-center m-4" data-aos="zoom-in" data-aos-once="true">Importante: Todos los shows de
             Jeruncio cumplen con el protocolo de COVID-19</h3>
 
-        <div class="protocolo m-4" data-aos="zoom-in-up" data-aos-once="true">
+        <div class="protocolo ms-3" data-aos="zoom-in-up" data-aos-once="true">
             <div class="tarjetas">
                 <h4 class="negrita text-center">Para ingresar a los shows de Jeruncio, deberás:</h4>
 
