--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
 
     <!-- Animaciones -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Favicon -->
 
@@ -78,29 +78,46 @@
 
         <div class="contacto__container">
 
-            <h2 class="titulo text-center mt-5">Contactá a Jeruncio</h2>
+            <h2 class="titulo text-center mt-5 consulta">Contactá a Jeruncio</h2>
 
             <form class="form container mt-5">
 
-                <div class="mb-3">
+                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Ingresá tu nombre">
+                </div>
+
+                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
+                    <label for="apellido" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="apellido" placeholder="Ingresá tu apellido">
+                </div>
+
+                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
                     <label for="exampleFormControlInput1" class="form-label">Dirección de email</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1"
                         placeholder="Ingresá tu email">
                 </div>
-                <div class="mb-3">
+
+                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
+                    <label for="telefono" class="form-label">Teléfono</label>
+                    <input type="tel" class="form-control" id="telefono" placeholder="Ingresá tu teléfono">
+                </div>
+
+                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
                     <label for="exampleFormControlTextarea1" class="form-label">Dejale tu mensaje a Jeruncio</label>
                     <textarea rows="10" cols="30" class="form-control" id="exampleFormControlTextarea1" rows="3"
                         placeholder="Escribí acá tu mensaje"></textarea>
                 </div>
 
-                <input class="boton" type="reset" value="Resetear formulario">
+                <input class="boton mb-5" type="reset" value="Resetear formulario" data-aos="fade-right"
+                    data-aos-once="true">
 
-                <input class="boton" type="button" value="Enviar">
+                <input class="boton" type="button" value="Enviar" data-aos="fade-left" data-aos-once="true">
 
             </form>
 
-            <div class="contacto__medios">
-                <div class="habilidades__contenedor animate__animated animate__bounceInLeft animate__delay-1s">
+            <div class="contacto__medios mt-5">
+                <div class="habilidades__contenedor" data-aos="zoom-in-up">
                     <a href="https://wa.me/5491158817371">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="32"
@@ -115,7 +132,8 @@
                     <p class="textoContacto">Contactate por WhatsApp</p>
                 </div>
 
-                <div class="habilidades__contenedor mb-3 animate__animated animate__bounceInRight animate__delay-2s">
+                <div class="habilidades__contenedor mb-3 mt-5" data-aos="zoom-in-down">
+                    <p class="textoContacto">Contactate por email</p>
                     <a href="mailto:jeruncio.clown@gmail.com">
                         <div class="logoCtc"><svg xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="32"
@@ -125,14 +143,17 @@
                                     fill="currentColor" />
                             </svg></div>
                     </a>
-                    <p class="textoContacto">Contactate por email</p>
                 </div>
             </div>
 
-            <div class="tarjetas text-center mt-5 mb-3" data-aos="fade-up">
-                <p class="negrita">Ante cualquier consulta, escribile a Jeruncio por cualquiera de los medios habilitados</p>
+            <div class="tarjetas text-center mt-4 mb-3 consulta" data-aos="zoom-out-up">
+                <p class="negrita">Ante cualquier consulta, escribile a Jeruncio por cualquiera de los medios
+                    habilitados</p>
                 <p>El tiempo de respuesta no superará las 24 hábiles</p>
+                <img class="habilidades__img" src="img/svg/time-left-svgrepo-com.svg" alt="tiempo">
             </div>
+
+            <h2 class="titulo text-center mt-5 consulta">Gracias por su visita!</h2>
 
         </div>
 
@@ -165,10 +186,16 @@
 
     </div>
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 400,
+            duration: 1000
+        });
+    </script>
 </body>
 
 </html>
