--- a/contacto.html
+++ b/contacto.html
@@ -62,10 +62,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link enlace--menu" href="tecnica.html">Técnica</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link enlace--menu" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -79,42 +75,6 @@
         <div class="contacto__container">
 
             <h2 class="titulo text-center mt-5 consulta">Contactá a Jeruncio</h2>
-
-            <form class="form container mt-5">
-
-                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" placeholder="Ingresá tu nombre">
-                </div>
-
-                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
-                    <label for="apellido" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="apellido" placeholder="Ingresá tu apellido">
-                </div>
-
-                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
-                    <label for="exampleFormControlInput1" class="form-label">Dirección de email</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="Ingresá tu email">
-                </div>
-
-                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
-                    <label for="telefono" class="form-label">Teléfono</label>
-                    <input type="tel" class="form-control" id="telefono" placeholder="Ingresá tu teléfono">
-                </div>
-
-                <div class="mb-5" data-aos="fade-down" data-aos-once="true">
-                    <label for="exampleFormControlTextarea1" class="form-label">Dejale tu mensaje a Jeruncio</label>
-                    <textarea rows="10" cols="30" class="form-control" id="exampleFormControlTextarea1" rows="3"
-                        placeholder="Escribí acá tu mensaje"></textarea>
-                </div>
-
-                <input class="boton mb-5" type="reset" value="Resetear formulario" data-aos="fade-right"
-                    data-aos-once="true">
-
-                <input class="boton" type="button" value="Enviar" data-aos="fade-left" data-aos-once="true">
-
-            </form>
 
             <div class="contacto__medios mt-5">
                 <div class="habilidades__contenedor" data-aos="zoom-in-up">
@@ -149,11 +109,16 @@
             <div class="tarjetas text-center mt-4 mb-3 consulta" data-aos="zoom-out-up">
                 <p class="negrita">Ante cualquier consulta, escribile a Jeruncio por cualquiera de los medios
                     habilitados</p>
-                <p>El tiempo de respuesta no superará las 24 hábiles</p>
+                <p>El tiempo de respuesta no superará las 24 horas</p>
                 <img class="habilidades__img" src="img/svg/time-left-svgrepo-com.svg" alt="tiempo">
             </div>
 
-            <h2 class="titulo text-center mt-5 consulta">Gracias por su visita!</h2>
+            <h2 class="titulo text-center mt-5 mb-5 consulta">Gracias por visitar el sitio web de Jeruncio!</h2>
+            
+            <div class="img__ctc fondito m-4">
+                <img src="img/ctc/ctc.png" alt="jeruncio">
+            </div>
+            
 
         </div>
 
