--- a/index.html
+++ b/index.html
@@ -67,10 +67,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link enlace--menu" href="tecnica.html">Técnica</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link enlace--menu" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -82,9 +78,10 @@
     <div class="fondo fondo--inicio">
 
         <div class="container inicio">
-
-            <h1 class="titulo text-center mt-5">Jeruncio Clown <img src="img/svg/clowncolor-svgrepo-com.svg"
-                    alt="clown" height="100"></h1>
+            <div class="container_titulo mt-5">
+                <h1 class="titulo text-center mt-5">Bienvenidos/as</h1>
+                <img src="img/svg/clowncolor-svgrepo-com.svg" alt="clown" height="100">
+            </div>
 
             <!-- Fin del titulo -->
 
@@ -128,6 +125,57 @@
 
             </div>
 
+
+            <div class="container tecnica">
+
+                <div class="tecnica__tarjeta" data-aos="fade-down-right" data-aos-once="true">
+                    <div class="tecnica__tarjeta__contenedor">
+                        <h3 class="tecnica__tarjeta--titulo text-center">Tiempos</h3>
+                        <img src="img/svg/clock-svgrepo-com.svg" alt="tiempos" height="50">
+                    </div>
+
+                    <div class="tarjetas m-4 text-center">
+                        <h4 class="subsTecnica">Duración:</h4>
+                        <p class="textoTecnica">45 a 60 minutos</p>
+                    </div>
+
+                    <div class="tarjetas m-4 text-center">
+                        <h4 class="subsTecnica">Armado:</h4>
+                        <p class="textoTecnica">30 minutos</p>
+                    </div>
+
+                    <div class="tarjetas m-4 text-center">
+                        <h4 class="subsTecnica">Desarmado:</h4>
+                        <p class="textoTecnica">20 minutos</p>
+                    </div>
+
+                </div>
+
+                <div class="tecnica__tarjeta" data-aos="fade-down-left" data-aos-once="true">
+
+                    <div class="tecnica__tarjeta__contenedor">
+                        <h3 class="tecnica__tarjeta--titulo text-center">Espacio</h3>
+                        <img src="img/svg/tent-svgrepo-com.svg" alt="espacio" height="50">
+                    </div>
+
+                    <div class="tarjetas m-4 text-center">
+                        <h4 class="subsTecnica">Espacio escénico</h4>
+                        <p class="textoTecnica">4m x 4m</p>
+                    </div>
+
+                    <div class="tarjetas m-4 text-center">
+                        <h4 class="subsTecnica">Disposición del público:</h4>
+                        <p class="textoTecnica">Anfiteatro / Ruedo de circo / Teatro Italiano</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+            <!--   aca cambiar por técnica -->
+            <!-- 
             <div class="inicio__funciones mb-4" data-aos="fade-up">
                 <h2 class="titulo text-center" data-aos="flip-up">Fechas de
                     Noviembre y Diciembre!</h2>
@@ -138,7 +186,7 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.435721615151!2d-58.39696378476657!3d-34.744615280423275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd29f5dedd66b%3A0xbb3ab0eb4fdd1bd6!2sEl%20Galp%C3%B3n%20de%20Banfield!5e0!3m2!1ses-419!2sar!4v1636581534945!5m2!1ses-419!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
