--- a/media.html
+++ b/media.html
@@ -61,10 +61,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link enlace--menu" href="tecnica.html">Técnica</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link enlace--menu" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -78,7 +74,7 @@
         <div class="container pt-3" data-aos="zoom-in" data-aos-once="true">
 
             <div class="media">
-                <h2 class="titulo text-center mt-5 animate__animated animate__shakeY">Descargate contenido de
+                <h2 class="titulo text-center mt-5 animate__animated animate__shakeY fondito">Descargate contenido de
                     Jeruncio en alta calidad!</h2>
 
                 <div class="tarjetas text-center mt-5">
@@ -116,6 +112,17 @@
                             <h5>Encuentro de circo de La Costa</h5>
                         </div>
                     </div>
+<!-- 
+                    <div class="carousel-item">
+                        <a href="img/galeria/4.png"><img src="img/galeria/4.png" class="d-block w-100"
+                                alt="Jeruncio"></a>
+
+                        <div class="carousel-caption d-block">
+                            <h5>Mercado consciente de Banfield</h5>
+                        </div>
+                    </div> -->
+
+
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="prev">
@@ -138,8 +145,13 @@
                     redes sociales </p>
             </div>
 
+
+          <!--   agregar el dossier, youtube y sacar Seguí a Jeruncio (...)
+            https://youtube.com/channel/UCkH7JATSi23lIKHRbXvQYJw
+        -->
+
             <div class="text-center mt-5 mb-3" data-aos="flip-up">
-                <h3 class="titulo mb-5">Te recordamos las redes:</h3>
+                <h3 class="titulo mb-5 fondito">Te recordamos las redes:</h3>
 
                 <div class="habilidades__contenedor mb-5">
                     <a href="https://www.instagram.com/jeruncio.clown/">
